src/widgets/accessible/complexwidgets.cpp
@@ -441,7 +441,7 @@ QAccessible::State QAccessibleComboBox::state() const
 
     if (QComboBox *cBox = comboBox()) {
         s.expandable = true;
-        s.expanded = isValid() && cBox->view()->isVisible();
+        s.expanded = isValid() && cBox->view() && cBox->view()->isVisible();
         s.editable = cBox->isEditable();
     }
     return s;
